[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
main_menu_path = "res://menus/MainMenu.tscn"

[node name="SceneManager" type="Node2D" parent="."]

[node name="AudioManager" type="Node2D" parent="."]

[node name="BGMusic" type="AudioStreamPlayer" parent="AudioManager"]

[node name="Instant1" type="AudioStreamPlayer" parent="AudioManager"]

[node name="Instant2" type="AudioStreamPlayer" parent="AudioManager"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverAnimations" type="AnimationPlayer" parent="CanvasLayer"]

[node name="HUD" type="Node2D" parent="CanvasLayer"]

[node name="Text" type="Node2D" parent="CanvasLayer"]

[node name="Black" type="Node2D" parent="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Black"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="GameOver" type="Node2D" parent="CanvasLayer"]

[node name="Snake" type="Node2D" parent="CanvasLayer/GameOver"]

[node name="QueenBeetle" type="Node2D" parent="CanvasLayer/GameOver"]

[node name="FlyingFrog" type="Node2D" parent="CanvasLayer/GameOver"]
